Closed Bug 626792 Opened 14 years ago Closed 13 years ago

Content view contentWidth/Height do not update immediately after scaling

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: stechz, Assigned: stechz)

References

Details

(Keywords: mobile)

Attachments

(1 file)

This is because the properties are updated only during painting.

See:
https://bugzilla.mozilla.org/attachment.cgi?id=501722&action=diff
What's the bug here?  Who's affected and to what extent?  "Scaling": where, fuzzy-scaling in the chrome process?
(In reply to comment #1)
> What's the bug here?  Who's affected and to what extent?  "Scaling": where,
> fuzzy-scaling in the chrome process?

Fennec is affected and nothing else really. We have code that will set fuzzy scale and then scroll to a place based on how big it thinks the content is. If contentWidth/contentHeight aren't adjusted immediately, then we are clipping scroll values to the wrong numbers.
Roc: this patch ensures that nsContentView's properties (that are in "shadow space") are immediately updated once scale is changed.
Comment on attachment 546227 [details] [diff] [review]
Content view contentWidth/Height do not update immediately after scaling

Review of attachment 546227 [details] [diff] [review]:
-----------------------------------------------------------------
Attachment #546227 - Flags: review?(roc) → review+
Attachment #546227 - Attachment description: Content vie2w contentWidth/Height do not update immediately after scaling → Content view contentWidth/Height do not update immediately after scaling
Attachment #546227 - Flags: review?(mbrubeck)
Comment on attachment 546227 [details] [diff] [review]
Content view contentWidth/Height do not update immediately after scaling

r=mbrubeck for the mobile patch
Attachment #546227 - Flags: review?(mbrubeck) → review+
Assignee: nobody → ben
Status: NEW → ASSIGNED
Keywords: mobile
http://hg.mozilla.org/mozilla-central/rev/cf0b3329da8c
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
Depends on: 673122
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: