Bug 626792 Content view contentWidth/Height do not update immediately after scaling r=roc r=mbrubeck