content/base/src/nsFrameLoader.h
@@ -127,11 +127,11 @@ public:
     float mYScale;
   };
 
-  nsContentView(nsIContent* aOwnerContent, ViewID aScrollId,
+  nsContentView(nsFrameLoader* aFrameLoader, ViewID aScrollId,
                 ViewConfig aConfig = ViewConfig())
     : mViewportSize(0, 0)
     , mContentSize(0, 0)
-    , mOwnerContent(aOwnerContent)
+    , mFrameLoader(aFrameLoader)
     , mScrollId(aScrollId)
     , mConfig(aConfig)
   {}
@@ -151,7 +151,7 @@ public:
   nsSize mViewportSize;
   nsSize mContentSize;
 
-  nsIContent *mOwnerContent; // WEAK
+  nsFrameLoader* mFrameLoader;  // WEAK
 
 private:
   nsresult Update(const ViewConfig& aConfig);
