layout/ipc/RenderFrameParent.cpp
@@ -396,7 +396,7 @@ BuildViewMap(ViewMap& oldContentViews, ViewMap& newContentViews,
       ViewConfig config = view->GetViewConfig();
       aXScale *= config.mXScale;
       aYScale *= config.mYScale;
-      view->mOwnerContent = aFrameLoader->GetOwnerContent();
+      view->mFrameLoader = aFrameLoader;
     } else {
       // View doesn't exist, so generate one. We start the view scroll offset at
       // the same position as the framemetric's scroll offset from the layer.
@@ -405,7 +405,7 @@ BuildViewMap(ViewMap& oldContentViews, ViewMap& newContentViews,
       config.mScrollOffset = nsPoint(
         NSIntPixelsToAppUnits(metrics.mViewportScrollOffset.x, auPerDevPixel) * aXScale,
         NSIntPixelsToAppUnits(metrics.mViewportScrollOffset.y, auPerDevPixel) * aYScale);
-      view = new nsContentView(aFrameLoader->GetOwnerContent(), scrollId, config);
+      view = new nsContentView(aFrameLoader, scrollId, config);
     }
 
     view->mViewportSize = nsSize(
@@ -558,7 +558,7 @@ BuildBackgroundPatternFor(ContainerLayer* aContainer,
   bgRgn.Sub(bgRgn, localIntContentVis);
   bgRgn.MoveBy(-translation);
   layer->SetVisibleRegion(bgRgn);
-      
+
   aContainer->InsertAfter(layer, nsnull);
 }
 
@@ -567,8 +567,7 @@ RenderFrameParent::RenderFrameParent(nsFrameLoader* aFrameLoader)
 {
   NS_ABORT_IF_FALSE(aFrameLoader, "Need a frameloader here");
   mContentViews[FrameMetrics::ROOT_SCROLL_ID] =
-    new nsContentView(aFrameLoader->GetOwnerContent(),
-                      FrameMetrics::ROOT_SCROLL_ID);
+    new nsContentView(aFrameLoader, FrameMetrics::ROOT_SCROLL_ID);
 }
 
 RenderFrameParent::~RenderFrameParent()
@@ -592,6 +591,14 @@ nsContentView*
 RenderFrameParent::GetContentView(ViewID aId)
 {
   return FindViewForId(mContentViews, aId);
+}
+
+void
+RenderFrameParent::ContentViewScaleChanged(nsContentView* aView)
+{
+  // Since the scale has changed for a view, it and its descendents need their
+  // shadow-space attributes updated. It's easiest to rebuild the view map.
+  BuildViewMap();
 }
 
 void
@@ -756,13 +763,13 @@ RenderFrameParent::BuildViewMap()
     // tag them as inactive and to remove any chance of them using a dangling
     // pointer, we set mContentView to NULL.
     //
-    // BuildViewMap will restore mOwnerContent if the content view is still
+    // BuildViewMap will restore mFrameLoader if the content view is still
     // in our hash table.
 
     for (ViewMap::const_iterator iter = mContentViews.begin();
          iter != mContentViews.end();
          ++iter) {
-      iter->second->mOwnerContent = NULL;
+      iter->second->mFrameLoader = NULL;
     }
 
     mozilla::layout::BuildViewMap(mContentViews, newContentViews, mFrameLoader, GetRootLayer());
@@ -776,7 +783,7 @@ RenderFrameParent::BuildViewMap()
     newContentViews[FrameMetrics::ROOT_SCROLL_ID] =
       FindViewForId(mContentViews, FrameMetrics::ROOT_SCROLL_ID);
   }
-  
+
   mContentViews = newContentViews;
 }
 
